fix: dark mode primary color issue

--- a/web/src/styles/app.scss
+++ b/web/src/styles/app.scss
@@ -26,7 +26,7 @@ body {
 }
   
 .card-container {
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: var(--o2-card-bg);
   border-radius: 0.5rem;
   box-shadow: 0 0.25rem 075rem var(--hover-shadow);
 }
